--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "argon2": "^0.41.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.6"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.6",
+    "validator": "^13.12.0"
   }
 }
